# AICodeGrapher

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INTEGRATION.md  LICENSE  README.md  SECURITY.md  codegraph.json.example  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: medium-article.md
src/codegrapher/: __init__.py  __main__.py  builder.py  cli.py  docs.py  flow.py  ignore.py  models.py  scanner.py  serialize.py
src/codegrapher/parsers/: __init__.py  base.py  calls.py  generic.py  go.py  java.py  javascript.py  kotlin.py  python.py  rust.py  swift.py
tests/: test_codegrapher.py
